# genproto

./: CMakeLists.txt  package.xml  setup.py
cmake/: genproto-extras.cmake.em
scripts/: CMakeLists.txt  gen_proto.py
