<?xml version="1.0"?>
<package>
  <name>genproto</name>
  <version>0.0.3</version>
  <description>Protobuf ROS message and service generators.</description>
  <maintainer email="haberlerm@gmail.com">Michael Haberler</maintainer>
  <license>BSD</license>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>proto</message_generator>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
